--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -165,6 +165,7 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathNode.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\AStar.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\JumpPointSearch.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\PathPlanner.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\PathPlannerTypes.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequestScheduler\PathRequest.h" />
