Move A* and JPS common code into a parent OpenClosePathPlanner class

--- a/AISimulation/AISimulation.vcxproj.filters
+++ b/AISimulation/AISimulation.vcxproj.filters
@@ -323,6 +323,9 @@
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\JumpPointSearch.h">
       <Filter>Source Files\TestEnvironment\Pathfinding\PathPlanner</Filter>
     </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\OpenClosePathPlanner.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\PathPlanner</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
