--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -163,6 +163,7 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\TestEnvironment\GameObject.h" />
     <ClInclude Include="src\TestEnvironment\MathGeom.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathfinderDebugRenderFlags.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathNode.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\AStar.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\JumpPointSearch.h" />
